--- a/_posts/2020-05-04-new-post.md
+++ b/_posts/2020-05-04-new-post.md
@@ -28,7 +28,7 @@ CBS, Digital payments(real time, defferd),UPI,Atms,MDR,NPCI(National Payments co
 Now when we’ve seen the money evolving from barter to coins them to paper currency , now we’ll dive deeper into the banking and electronics payments.
 Banking systems use software called CBS (core banking solution). In Indian banks this software is generally “finnacle” developed by Infosys. This CBS allows a bank teller to access your account from any branch of the Bank. This is also the software that hosts your Net banking websites.
 
-[CBS interface on Bank Server]("https://i.postimg.cc/nV3xQKr8/standing-instruction-finacle-1.jpg")
+![CBS interface on Bank Server]("https://i.postimg.cc/nV3xQKr8/standing-instruction-finacle-1.jpg")
 
 Now all the digital transactions are of two types.
 1.	Real Time (instant or almost instant)
@@ -68,8 +68,8 @@ Obviously You’ll need an ATM card but here’s a catch
 ATM cards are of Two types :
 1.	Debit Card : It is a basic card linked with your Savings account and money is directly debited from your acoount.
 2.	Credit Card: It is a card where we can avail short term loans during a cash crunch, It is interest free for about 45 days, But don’t forget to clear payment on time coz it invites heavy Interest afterwards. The amount that can be taken depends on your Credit rating (will discuss later)
- <img style="float:left;" src="https://i.postimg.cc/MKXS0cfn/Frontof-Card2-5a02085c9e9427003c0d51b8.png" width="500"height="250">
-<img style="float:right;" src="https://i.postimg.cc/wM4d8zZx/3ef3e3c087fd927a3f50590a339d3b1c.jpg"width="500"height="250">
+ <img style="float:left;" src="https://i.postimg.cc/MKXS0cfn/Frontof-Card2-5a02085c9e9427003c0d51b8.png" width="500" height="250">
+<img style="float:right;" src="https://i.postimg.cc/wM4d8zZx/3ef3e3c087fd927a3f50590a339d3b1c.jpg" width="500" height="250">
 The features of a Card are visually shown 
 there is a card number with the owners and issuing bank’s name and a expiry date. The reverse side is required to be signed for POS transactions, the data is saved on a black magnetic strip, but new cards are being issued which have a smart chip that avoid fraudsters to clone your card.
 Keep it in a safe place and don’t do the common stupidity of writing your pin somewhere 
@@ -83,7 +83,7 @@ ATM’s are also classified as follows:
 1.	Bank Label   :  hosted and operated by bank itself
 2.	White label  :  hosted and operated by non bank entity
 3.	Brown label  : Outsourced but operated by bank
-<img style="float:right;" src="https://i.postimg.cc/xT7S60Lt/1361130.jpg"width="500"height="300">
+<img style="float:right;" src="https://i.postimg.cc/xT7S60Lt/1361130.jpg" width="500" height="300">
 White label ATM’s are quite new for India and can be seen hosted by a NON BANK firm like Muthoot Finance
 ATM also runs on a software but how?
 The software of ATM derives it’s data from the CBS of bank and operates on several platforms like:
@@ -93,12 +93,12 @@ CDAC-> runs on BOSS(Bharat operating system solution)
 But wait the role of your ATM card isn’t over yet, Lets go shopping but cashless, but HOW??
 The ATM card can also be used to pay at merchant using a device called POS(point of sale)terminal where a merchant uses a device to swipe your card and proceeds with the transaction. 
 The Newly launched Rupay card is a indigenous card network which is cost effective and  provides faster transaction. Unlike VISA and MASTERCARD where the transaction goes through a foreign server and that service provider charge a higher rate, Rupay is all ‘desi. But it doesn’t work with Netflix and Prime 
-<img style="float:left;" src="https://i.postimg.cc/9fP5XZKn/upi-payments.jpg"width="750"height="250">
+<img style="float:left;" src="https://i.postimg.cc/9fP5XZKn/upi-payments.jpg" width="750" height="250">
 Now Let’s switch our focus to the latest fad : UPI
 UPI stands for Unified Payment Interface , it is a unique initiative taken by the NPCI and has reached to masses in no time. Here the NPCI has made a secure backend platform usually referred to as UPI. This platform is used by various companies like Google(Google Pay), Amazon(amazonpay) and by various banks to build their UPI apps.
 So in a UPI application we can link our savings Bank Ac and decide a PIN to secure it just like in ATM. Now a Vpa ID (virtual Payment ID ) is generated which can be used to pay and receive money instantly ,we can also share bills with our friends(make them register ASAP) and check account balance, If you’ve ever used one You’ll notice the screen below, this is common in all apps because the basic processing backend is same for all the UPI apps. 
 
-<img style="float:left;" src="https://i.postimg.cc/52CWGZ31/UPI-PIN-2.jpg"width="500"height="350">
+<img style="float:left;" src="https://i.postimg.cc/52CWGZ31/UPI-PIN-2.jpg" width="500"height="350">
 
 
 Something about NPCI:
