--- a/_posts/2020-05-04-new-post.md
+++ b/_posts/2020-05-04-new-post.md
@@ -19,10 +19,10 @@ author: Anubhav-Gupta
       </style>
 
 
-Post 3 <br/>
-Dated 4/5/2020;\
- Digital Currency & transactions.<br/>
-Snippet:<br/>
+**Post 3** <br/>
+**Dated 4/5/2020**;<br/>
+ **Digital Currency & transactions.**<br/>
+**Snippet:**<br/>
 CBS, Digital payments(real time, defferd),UPI,Atms,MDR,NPCI(National Payments corporation of India)<br/>
 ;
 Now when we’ve seen the money evolving from barter to coins them to paper currency , now we’ll dive deeper into the banking and electronics payments.
