--- a/_posts/2020-05-05-2020-05-05-Inflation.md
+++ b/_posts/2020-05-05-2020-05-05-Inflation.md
@@ -22,12 +22,12 @@ author: Anubhav-Gupta
 **post 4** <br/>
 **Dated**5/5/2020<br/>
 **Inflation** <br/>
-**snippet** Today we will explore the reason why prices rise and how to fight this rise ending up in profits :)<br/>
+**snippet** Today we will explore the reason why prices rise and how to fight this rise, ending up in profits :)<br/>
 
 We have all seen our parents and grandparents complaining about high prices today as compared to **their** times. But why do prices rise?? Why the value of money depreciate over time?? read till end to find out<br/>
 
 Inflation is primarily caused due to several reasons but the main factor is the increase in demmand of a product. The basic Economic rule of Demand and supply plays a major role in deciding the prices of a product.<br/>
- For example if everyone becomes fairly rich to purchase a product and everyone wants it say a pack of candies, but there's a prolem that the production of pack of candies is limited, so all the rick kids of town with a sweet tooth would compete to get candies, Here comes the clever shopkeeper that rises the price of candies hence only the kids with some extra bucks would be able to get caries :). This shopkeeper in practical life is the market temprament that controlls the price of a comodity<br/>
+ For example if everyone becomes fairly rich to purchase a product and everyone wants it say a pack of candies, but there's a prolem that the production of pack of candies is limited, so all the rich kids of town with a sweet tooth would compete to get candies, Here comes the clever shopkeeper that rises the price of candies hence only the kids with some extra bucks would be able to get caries :). This shopkeeper in practical life is the market temprament that controlls the price of a comodity<br/>
 This game applied in reverse is also true,
 Example the Global demmand of Crude oil has declined due to lockdowns to fight **chinese virus** , This lowered demmand has deflated the crude oil and it even surpassed zero value.<br/>
 another factor  is Global Exchange rates<br/>
