--- a/_posts/2020-05-06-2020-05-06-Monetry-Policy.md
+++ b/_posts/2020-05-06-2020-05-06-Monetry-Policy.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Money Multiplier
+title: p5-Money Multiplier
 date: 2020-05-06 15:59
 author: Anubhav-Gupta
 summary: Today We'll start with monetry policy
