--- a/_posts/2020-05-06-2020-05-06-Monetry-Policy.md
+++ b/_posts/2020-05-06-2020-05-06-Monetry-Policy.md
@@ -33,7 +33,7 @@ People need liquid money for 4 motives:<br/>
 3. Impulsive purchase: To purchase something out of sudden <br/>
 4. Speculative Motive: To speculate on prices and wait for price to lower and then purchase<br/>
 
-So there is demmand of money but with demand there aslo exist some reserves or places where money is stored: These are classified as follows:<br/>
+So there is demmand of money but with demand there also exist some reserves or places where money is stored: These are classified as follows:<br/>
 
 1. A->Currency/cash
 2. B->Demmand Deposit/(deposit where we can withdraw anytime on demmand i.e. Savings account or Liquid funds<br/>
@@ -49,7 +49,7 @@ maybe yes maybe no :)<br/>
 there comes a role of **Money Multiplier**<br/>
 better understood by this hypothetical scenerio<br/>
 but before it there's a term called<br/> 
-**CRR** (Cash reserve ratio) this is a basic ratio which is defined ny the reserve bank of India for banks to maintain a percentage of amiunt thet get as deposits to avoid any future cash runs, where people run to bank for cash.Because if a bank gives loan of each penny that it recieves as deposit then the regular functioning of bank would stop, or the bank may crash. Hence maintaining CRR is strictly important..<br/>
+**CRR** (Cash reserve ratio) this is a basic ratio which is defined ny the reserve bank of India for banks to maintain a percentage of amount they get as deposits to avoid any future cash runs, where people run to bank for cash.Because if a bank gives loan of each penny that it recieves as deposit then the regular functioning of bank would stop, or the bank may crash. Hence maintaining CRR is strictly important..<br/>
 suppose in a banking system RBI release a 100 rupees but the CRR stands at 10% then the money that is realised in market get's multiplied by 100/CRR , so in our case the money that reaches market is 1000 whereas RBI relaesed only 100 rupees ....HOW???
 
 imagine RBI released 100 rupees in market through a bank,Banks has to keep 10 as CRR but release loan of 90 to me, I purchase a car from dealer - Bholla Singh and he goes to his bank where he deposits 90 he recieved from me. Now the Bholla Singh's bank keeps 10%of 90 as CRR i.e 9 and releases 81 as loan.
