--- a/_posts/2020-05-06-2020-05-06-Monetry-Policy.md
+++ b/_posts/2020-05-06-2020-05-06-Monetry-Policy.md
@@ -22,7 +22,7 @@ summary: Today We'll start with monetry policy
 
 **post 5** <br/>
 **Dated**6/5/2020<br/>
-**Inflation** <br/>
+**Money Multiplier** <br/>
 **snippet** The RBI has the power to controll the amount of money you have in your pocket, Read till end to find out how>><br/>
 
 The Reserve Bank Of INDIA (RBI) holds a meeting after every two months to announce it's regulating policy called Monetry Policy. Monetry Policy is a tool of RBI to controll inflation and ensure a healthy growth of GDP.<br/>
