--- a/_snip-bits/2020-05-06-RBI.md
+++ b/_snip-bits/2020-05-06-RBI.md
@@ -3,6 +3,7 @@ layout: post
 name: RBI 
 date: 2020-05-06 18:11
 author: Anubhav Gupta
+permlink: /fortheloveofnifty/snip-bits/
 ---
 Under Development
 
