--- a/_posts/2020-05-06-2020-05-06-Monetry-Policy.md
+++ b/_posts/2020-05-06-2020-05-06-Monetry-Policy.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: p5-Money Multiplier
+title: P5-Money Multiplier
 date: 2020-05-06 15:59
 author: Anubhav-Gupta
 summary: Today We'll start with monetry policy
@@ -23,20 +23,20 @@ summary: Today We'll start with monetry policy
 **post 5** <br/>
 **Dated**6/5/2020<br/>
 **Money Multiplier** <br/>
-**snippet** The RBI has the power to controll the amount of money you have in your pocket, Read till end to find out how>><br/>
+**snippet** The RBI has the power to control the amount of money you have in your pocket, Read till end to find out how>><br/>
 
-The Reserve Bank Of INDIA (RBI) holds a meeting after every two months to announce it's regulating policy called Monetry Policy. Monetry Policy is a tool of RBI to controll inflation and ensure a healthy growth of GDP.<br/>
-To understand this we need to build a base on Need of money and types of money:<br/>
+The Reserve Bank Of INDIA (RBI) holds a meeting after every two months to announce it's regulating policy called Monetry Policy. Monetry Policy is a tool of RBI to control inflation and ensure a healthy growth of GDP.<br/>
+To understand this we need to know about the Need of money and types of money:<br/>
 People need liquid money for 4 motives:<br/>
 1. Transaction Motive :to Purchase goods and services of daily needs<br/>
 2. Precautionary motive: To avoid sudden emergency cash crunch<br/>
 3. Impulsive purchase: To purchase something out of sudden <br/>
 4. Speculative Motive: To speculate on prices and wait for price to lower and then purchase<br/>
 
-So there is demmand of money but with demand there also exist some reserves or places where money is stored: These are classified as follows:<br/>
+So there is demand of money but with demand there also exist some reserves or places where money is stored: These are classified as follows:<br/>
 
 1. A->Currency/cash
-2. B->Demmand Deposit/(deposit where we can withdraw anytime on demmand i.e. Savings account or Liquid funds<br/>
+2. B->Demand Deposit/(deposit where we can withdraw anytime on demand i.e. Savings account or Liquid funds<br/>
 3. C->Fixed assets/Time deposits(We can not withdraw money immediately)
 
 here **A and B** form a class of money called **M<sub>1</sub>**(narrow money) this is the most liquid form of money that flows in market.<br/>
@@ -50,12 +50,12 @@ there comes a role of **Money Multiplier**<br/>
 better understood by this hypothetical scenerio<br/>
 but before it there's a term called<br/> 
 **CRR** (Cash reserve ratio) this is a basic ratio which is defined ny the reserve bank of India for banks to maintain a percentage of amount they get as deposits to avoid any future cash runs, where people run to bank for cash.Because if a bank gives loan of each penny that it recieves as deposit then the regular functioning of bank would stop, or the bank may crash. Hence maintaining CRR is strictly important..<br/>
-suppose in a banking system RBI release a 100 rupees but the CRR stands at 10% then the money that is realised in market get's multiplied by 100/CRR , so in our case the money that reaches market is 1000 whereas RBI relaesed only 100 rupees ....HOW???
+suppose in a banking system RBI release a 100 rupees but the CRR stands at 10% then the money that is realised in market get's multiplied by 100/CRR , so in our case the money that reaches market is 1000 whereas RBI released only 100 rupees ....HOW???
 
-imagine RBI released 100 rupees in market through a bank,Banks has to keep 10 as CRR but release loan of 90 to me, I purchase a car from dealer - Bholla Singh and he goes to his bank where he deposits 90 he recieved from me. Now the Bholla Singh's bank keeps 10%of 90 as CRR i.e 9 and releases 81 as loan.
+Imagine RBI released 100 rupees in market through a bank,Banks has to keep 10 as CRR but release loan of 90 to me, I purchase a car from dealer - Bholla Singh and he goes to his bank where he deposits 90 he recieved from me. Now the Bholla Singh's bank keeps 10%of 90 as CRR i.e 9 and releases 81 as loan.
 this cycle continues and a amount of 1000 is realised in Market whereas RBI released only 100. Also note that the original 100 end up lying in CRR <br/>
-In a funvctional Economy the money multiplier must always be more than 1<br/>
-there are many leakes in this system in practical life but it gives us a feel that how sensitive the management of money is....<br/>
+In a functional Economy the money multiplier must always be more than 1<br/>
+there are many leaks in this system in practical life but it gives us a feel that how sensitive the management of money is....<br/>
 ..Keep reading this daily and you'll be money indepenent by the end of this lockdown...
 <br/> Tommorow We will start with basic ratioes and terms of Monetry Policy....<br/>
 Thanks for Reading
