--- a/_posts/2020-05-07-2020-05-07-ratioes.md
+++ b/_posts/2020-05-07-2020-05-07-ratioes.md
@@ -27,7 +27,7 @@ Let's start with a Bank's statement and analyze it<br/>
 A bank as Liabilities (Money that bank has to give to others) defined as<br/>
 1. Time Liabilities<br/>
     i). The money that people have deposited for a fixed time Example : Fixed deposits(FD), Reccuring deposit(RD) <br/>
-    ii). In 2015 Govt. has approve an Unbreakable FD with higher interest rates <br/>
+    ii). In 2015 Govt. has approved an Unbreakable FD with higher interest rates <br/>
 2. Demand Liabilities<br/>
    i). The amount in bank accounts that can anytime  be withdrawn by a account holder<br/>
     ii). Unclaimed Deposits<br/>
@@ -53,6 +53,8 @@ But why do RBI has such strict norms in maintaining **NDTL** because in previous
 If we carefully see a Bank's book it earns profit through loans because Bank gets deposits on which it pays us some interest but it gives a part of our money as loan at a much higher interest rate and the profit of bank is derived from the difference in interest of Loan and Deposits. This margin is called SPREAD in terminology.<br/>
 
 So controlling a Bank's NDTL is controlling its ability to give loans because if Reserve ratios are high then bank has comparatively less money to dispense as loans. This indeed makes Banks to GO for a **High spread** hence loans get expensive and people spend less in market **ultimately Lowering the demand**
+Hence We can clearly reason out the fact that if there is high liquidity in market then RBI raises Reserve ratios to avoid uncontrolled inflation, Whereas if there is shortage if cash in market then RBI can dispense more money in the market to controll deflation. SO it is the crucial role of RBI to maintain a healthy market using The Tools of Monetry Policy. <br/>
+
 <br/>
 the reverse path is also true where Reserve ratios are lowered and demand in market is raised to match the corresponding supply of the time....<br/>
 There is another term called  Liquidity adjustment facility (LAF) or **Repo Rate** this is the rate at which bank lends money to banks in case of short term loans, and at **reverse repo rate** RBI takes deposits from banks<br/>
