--- a/_posts/2020-05-10-2020-05-10-Bunty's-Listing.md
+++ b/_posts/2020-05-10-2020-05-10-Bunty's-Listing.md
@@ -53,6 +53,10 @@ Now a lot of investors may apply to purchase Bunty's shares, but most of the tim
 Let's see the other way around if i want to subscribe an IPO of Bunty's company, I was required to pay the amount before the allocation of shares, and the money was deducted form my account. now if I dont get the allocation the money would be refunded, but it took time and i lost interest on money in meanwhile.<br/>
 Hence SEBI came up with a Unique Idea called **ASBA** Application Supported by Blocked amount. Here the amount would be blocked in my account itsef and i would be paid interest also, There won't be issue of refunda as on failure of allocation, The amount would be unblocked, In case of sucessful allocation, amount would be deducted...<br/><br/>
 
+Let's see the other method called **offer for sale** <br/><br/>
+1. Bunty or the issuing company sells the whole lot to an intermediary at an agreed price<br/>
+2. The intermediary sells these shares to Public at a price with his margin,
+here the issuiong company is saved from a tedious porcess as described above but has to agree on a margin grabbed by the intyermediary<br/><br/> 
 Now our own Bunty has become a Big man and if his IPO is subscribed sucessfully then his shares will enter the Secondary market to trade..<br/><br/>
 But what if Bunty fails to enter the market ??? <br/>
 well there are 22 regional exchanges where he can get listed for local or OTC placement. Hence the limit is Sky!!!<br/><br/>
