--- a/_posts/2020-05-10-2020-05-10-Bunty's-Listing.md
+++ b/_posts/2020-05-10-2020-05-10-Bunty's-Listing.md
@@ -50,8 +50,8 @@ under Book Building the merchant banker calculates a price band and the upper li
 the Book remains open for three days for investors to place bids and based on the data of bids and the willingness of investors a price is released called Cut off price,, Again based on Demand and Supply.<br/>
 Now a lot of investors may apply to purchase Bunty's shares, but most of the time the number of shares released is less then the whole demmand. In this case the merchant banker decides about who will be attoted shares and who wouldn't.<br/><br/>
 
-Let's see the other way around if i want to subscribe an IPO of Bunty's company, I was required to pay the amount before the allocation of shares, and the money was deducted form my account. now if I dont get the allocation the money would be refunded, but it took time and i lost interest on money in meanwhile.<br/>
-Hence SEBI came up with a Unique Idea called **ASBA** Application Supported by Blocked amount. Here the amount would be blocked in my account itsef and i would be paid interest also, There won't be issue of refunda as on failure of allocation, The amount would be unblocked, In case of sucessful allocation, amount would be deducted...<br/><br/>
+Let's see the other way around if i want to subscribe an IPO of Bunty's company, I was required to pay the amount before the allocation of shares, and the money was deducted form my account. now if I dont get the allocation the money would be refunded, but it took time and I lost interest on money in meanwhile.<br/>
+Hence SEBI came up with a Unique Idea called **ASBA** Application Supported by Blocked amount. Here the amount would be blocked in my account itself and I would be paid interest also, There won't be issue of refund as on failure of allocation, The amount would be unblocked, In case of sucessful allocation, amount would be deducted...<br/><br/>
 
 Let's see the other method called **offer for sale** <br/><br/>
 1. Bunty or the issuing company sells the whole lot to an intermediary at an agreed price<br/>
