commnets section embedded

--- a/_posts/2020-05-07-2020-05-07-ratioes.md
+++ b/_posts/2020-05-07-2020-05-07-ratioes.md
@@ -3,6 +3,8 @@ layout: post
 title: P6-Basics-of-Monetry-Policy
 date: 2020-05-07 15:05
 author: Anubhav Gupta
+comments: true
+
 ---
 <style>
     header{
