--- a/_posts/2020-05-10-2020-05-10-Bunty's-Listing.md
+++ b/_posts/2020-05-10-2020-05-10-Bunty's-Listing.md
@@ -3,6 +3,9 @@ layout: post
 title: P9-Bunty's-Listing
 date: 2020-05-10 16:52
 author: Anubhav Gupta
+comments: true
+
+
 ---
 
 <style>
@@ -14,7 +17,8 @@ author: Anubhav Gupta
          font-family: fantasy;
         }
     
-      
+      div{
+        background-image: url("https://i.postimg.cc/y6fw6m3Y/yoann-siloine-dyax-Q-ao-GWY-unsplash.jpg");
       }
       </style>
 
