commnets section embedded-all posts

--- a/_posts/2020-05-06-2020-05-06-Monetry-Policy.md
+++ b/_posts/2020-05-06-2020-05-06-Monetry-Policy.md
@@ -60,3 +60,18 @@ there are many leaks in this system in practical life but it gives us a feel tha
 ..Keep reading this daily and you'll be money indepenent by the end of this lockdown...
 <br/> Tommorow We will start with basic ratioes and terms of Monetry Policy....<br/>
 Thanks for Reading
+
+{% if page.comments %}
+
+<div id="disqus_thread"></div>
+<script>
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://https-gupta-anubhav12-github-io-fortheloveofnifty.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+{% endif %}
