--- a/_posts/2020-05-07-2020-05-07-ratioes.md
+++ b/_posts/2020-05-07-2020-05-07-ratioes.md
@@ -68,3 +68,17 @@ The Policy Rates Can be Checked at the Official site with the following link
 [Policy rates RBI](https://www.rbi.org.in/home.aspx)
 
 
+{% if page.comments %}
+
+<div id="disqus_thread"></div>
+<script>
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://https-gupta-anubhav12-github-io-fortheloveofnifty.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+{% endif %}
