--- a/_posts/2020-05-09-2020-05-09-What-is-a-Share.md
+++ b/_posts/2020-05-09-2020-05-09-What-is-a-Share.md
@@ -53,3 +53,18 @@ Now Bunty and Bholla Singh are good friends, Bholla Singh promise him to give 1 
  Bholla SIngh , Bunty, Babbla , Laddoo are not fictional Charaters but my Friends, Who might get offended after reading this, But they are cool people. :):)..<br/><br/>
 
  Happy Learning
+
+ {% if page.comments %}
+
+<div id="disqus_thread"></div>
+<script>
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://https-gupta-anubhav12-github-io-fortheloveofnifty.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+{% endif %}
