--- a/_posts/2020-05-04-new-post.md
+++ b/_posts/2020-05-04-new-post.md
@@ -106,3 +106,17 @@ Something about NPCI:<br/>
 National Payments corporation of India is a section-8(refers to rules in companies act) not for profit company and has 56 promoter Banks for funding and running the company.
 
 
+{% if page.comments %}
+
+<div id="disqus_thread"></div>
+<script>
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://https-gupta-anubhav12-github-io-fortheloveofnifty.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+{% endif %}
