--- a/_posts/2020-05-05-2020-05-05-Inflation.md
+++ b/_posts/2020-05-05-2020-05-05-Inflation.md
@@ -53,3 +53,18 @@ to counter inflation rising sky high, The regulatory body of INDIA called **RBI*
 for the time being Enjoy This clip 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/GqeRnxSuLFI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+{% if page.comments %}
+
+<div id="disqus_thread"></div>
+<script>
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://https-gupta-anubhav12-github-io-fortheloveofnifty.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+{% endif %}
