--- a/_posts/2020-05-04-new-post.md
+++ b/_posts/2020-05-04-new-post.md
@@ -25,10 +25,10 @@ comments: true
 **Dated 4/5/2020**;<br/>
  **Digital Currency & transactions.**<br/>
 **Snippet:**<br/>
-CBS, Digital payments(real time, defferd),UPI,Atms,MDR,NPCI(National Payments corporation of India)<br/>
-;
+CBS, Digital payments(real time, defferd),UPI,Atms,MDR,NPCI(National Payments corporation of India)<br/><br/>
+
 Now when we’ve seen the money evolving from barter to coins them to paper currency , now we’ll dive deeper into the banking and electronics payments.
-Banking systems use software called CBS (core banking solution). In Indian banks this software is generally “finnacle” developed by Infosys. This CBS allows a bank teller to access your account from any branch of the Bank. This is also the software that hosts your Net banking websites.
+Banking systems use software called CBS (core banking solution). In Indian banks this software is generally **“finnacle”** developed by Infosys. This CBS allows a bank teller to access your account from any branch of the Bank. This is also the software that hosts your Net banking websites.
 <img style="float:left;" src="https://i.postimg.cc/nV3xQKr8/standing-instruction-finacle-1.jpg">
 
 Now all the digital transactions are of two types.
@@ -83,7 +83,7 @@ ATM’s are installed by banks for quick service at following aspects;
 ATM’s are also classified as follows:
 1.	Bank Label   :  hosted and operated by bank itself <br/>
 2.	White label  :  hosted and operated by non bank entity <br/>
-3.	Brown label  : Outsourced but operated by bank <br/>
+3.	Brown label  :  Outsourced but operated by bank <br/>
 <img style="float:right;" src="https://i.postimg.cc/xT7S60Lt/1361130.jpg">
 White label ATM’s are quite new for India and can be seen hosted by a NON BANK firm like Muthoot Finance
 ATM also runs on a software but how?
@@ -95,6 +95,7 @@ But wait the role of your ATM card isn’t over yet, Lets go shopping but cashle
 The ATM card can also be used to pay at merchant using a device called POS(point of sale)terminal where a merchant uses a device to swipe your card and proceeds with the transaction. 
 The Newly launched Rupay card is a indigenous card network which is cost effective and  provides faster transaction. Unlike VISA and MASTERCARD where the transaction goes through a foreign server and that service provider charge a higher rate, Rupay is all ‘desi. But it doesn’t work with Netflix and Prime 
 <img style="float:left;" src="https://i.postimg.cc/9fP5XZKn/upi-payments.jpg">
+<br/>
 Now Let’s switch our focus to the latest fad : UPI
 UPI stands for Unified Payment Interface , it is a unique initiative taken by the NPCI and has reached to masses in no time. Here the NPCI has made a secure backend platform usually referred to as UPI. This platform is used by various companies like Google(Google Pay), Amazon(amazonpay) and by various banks to build their UPI apps.<br/>
 So in a UPI application we can link our savings Bank Ac and decide a PIN to secure it just like in ATM. Now a Vpa ID (virtual Payment ID ) is generated which can be used to pay and receive money instantly ,we can also share bills with our friends(make them register ASAP) and check account balance, If you’ve ever used one You’ll notice the screen below, this is common in all apps because the basic processing backend is same for all the UPI apps. 
