--- a/_posts/2020-05-10-2020-05-10-Bunty's-Listing.md
+++ b/_posts/2020-05-10-2020-05-10-Bunty's-Listing.md
@@ -24,7 +24,7 @@ comments: true
 
 **post 9** <br/>
 **Dated**10/5/2020<br/>
-**What is a Share** <br/>
+**Bunty's Listing** <br/>
 **snippet** Today we will see How bunty can Register his company with Stock Exchange<br/>
 
 In the previous post we saw that Bunty raised his capital for his company form his friends and acquitances (this selling of shares to less than 50 investors is called **Private Placement**). But now Bunty's Company has grown more and he needs more capital for Expansion of his company. Well he can now get his company listed on the stock exchange to sell shares to common public instead of just selling to his friends.<br/>
@@ -51,9 +51,9 @@ Without the Issue date and price draft is called as **red herring**<br/><br/>
 Now Bunty eagerly waits for **Book Building** (The process to decide the issue price of IPO)<br/>
 under Book Building the merchant banker calculates a price band and the upper limit of this band is called **cap** and the lower limit is called **floor** .
 the Book remains open for three days for investors to place bids and based on the data of bids and the willingness of investors a price is released called Cut off price,, Again based on Demand and Supply.<br/>
-Now a lot of investors may apply to purchase Bunty's shares, but most of the time the number of shares released is less then the whole demmand. In this case the merchant banker decides about who will be attoted shares and who wouldn't.<br/><br/>
+Now a lot of investors may apply to purchase Bunty's shares, but most of the time the number of shares released is less then the whole demmand. In this case the merchant banker decides about who will be alloted shares and who wouldn't be.<br/><br/>
 
-Let's see the other way around if i want to subscribe an IPO of Bunty's company, I was required to pay the amount before the allocation of shares, and the money was deducted form my account. now if I dont get the allocation the money would be refunded, but it took time and I lost interest on money in meanwhile.<br/>
+Let's see the other way around if I want to subscribe an IPO of Bunty's company, I was required to pay the amount before the allocation of shares, and the money was deducted form my account. Now if I dont get the allocation the money would be refunded, but it took time and I lost interest on money in meanwhile.<br/>
 Hence SEBI came up with a Unique Idea called **ASBA** Application Supported by Blocked amount. Here the amount would be blocked in my account itself and I would be paid interest also, There won't be issue of refund as on failure of allocation, The amount would be unblocked, In case of sucessful allocation, amount would be deducted...<br/><br/>
 
 Let's see the other method called **offer for sale** <br/><br/>
@@ -62,7 +62,7 @@ Let's see the other method called **offer for sale** <br/><br/>
 here the issuiong company is saved from a tedious porcess as described above but has to agree on a margin grabbed by the intyermediary<br/><br/> 
 Now our own Bunty has become a Big man and if his IPO is subscribed sucessfully then his shares will enter the Secondary market to trade..<br/><br/>
 But what if Bunty fails to enter the market ??? <br/>
-well there are 22 regional exchanges where he can get listed for local or OTC placement. Hence the limit is Sky!!!<br/><br/>
+well there are 22 regional exchanges where he can get listed for local or OTC placement. Hence the limit is the Sky, All we need is to fly !!!<br/><br/>
 
 Happy Investing
 
