--- a/_posts/2020-05-12-2020-05-12-Setting-Up-trade.md
+++ b/_posts/2020-05-12-2020-05-12-Setting-Up-trade.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Setting-Up-Trade
+title: P11-Setting-Up-Trade
 date: 2020-05-12 15:20 
 author: Anubhav Gupta
 ---
@@ -20,7 +20,7 @@ author: Anubhav Gupta
 
 **post 11** <br/>
 **Dated**12/5/2020<br/>
-**What after IPO** <br/>
+**Setting Up Trade** <br/>
 **snippet** Today we will explore How as an investor we can purchase Shares<br/>
 
 To purchase any shares from the stock exchange we need to have an account with the stock exchange. We have seen in previous posts that the trading was changed to electronic form in 1995 after the establishment of NSE (National Stock Exchange). The shares that we purchase form stock exchange are stored in  Demat form (dematerialized form) in a special account called Demat Account. <br/>
