--- a/_posts/2020-05-13-2020-05-14-Smart-Goal.md
+++ b/_posts/2020-05-13-2020-05-14-Smart-Goal.md
@@ -23,30 +23,30 @@ author: Anubhav Gupta
 **Setting a Smart Goal** <br/>
 **snippet** Today we will explore the ideal and essential feratures of a goal<br/>
 
-Everyone want's to be rich in this world and has a goal to be rich. But the term rich is comparative and is ambiguous. Having a Car and own home can be a richness defination of one whereas owning a MNC can be the degree of richness of other.<br/>
+Everyone want's to be rich in this world and has a goal to be rich. But the term rich is comparative and is ambiguous. Having a Car and to own home can be a state of being rich for one whereas owning a MNC can be the defination of richness of other.<br/><br/>
 so in order to work for a Goal, we need to first set it up properly. Here we define the smartness behind a SMART Goal which would help you set your goals.<br/>
 
-SMART: can be seen as : Specific, Measurable, Achievable Realistic and Time bound<br/>
+SMART: c<br/>an be seen as : Specific, Measurable, Achievable Realistic and Time bound<br/><br/>
 we all might have some goals, Test those on these aspects and decide if you have a Smart goal or you need to modify it for being smart.<br/>
-**Specific** means to set a well defined and specific goal, Like if I bunty asks his employees to **"get more business"** is lame, whereas to ask them to "btain 20% growth of sales by entering new terrirories and explore a new tie up" would be specific<br/>
+**Specific** means to set a well defined and specific goal, Like if I bunty asks his employees to **"get more business"** is lame, whereas to ask them to "btain 20% growth of sales by entering new terrirories and explore a new tie up" would be specific<br/><br/>
 **Measurable** means to set a goal with a realistic value, Laddu once said to me "**I want a lot of money**" but he didn't specified How much??. So your Goal should be measurable and must have a value that is realisable in market.<br/>
-**Achievable** A goal that can be realised in your life only should be counted smart. <br/>
-**Realistic** a goal should be realistic and shouldn't be a fantasy from your dreams, Buying real Estate on Mars is not realistic for this generation at least Sorry Elon :( <br/>
+**Achievable** A goal that can be realised in your life only should be counted smart. <br/><br/>
+**Realistic** a goal should be realistic and shouldn't be a fantasy from your dreams, Buying real Estate on Mars is not realistic for this generation at least Sorry Elon :( <br/><br/>
 **Time Bound** Time limit for achieving a goal is very important to avoid unecessary procastination. Also it helps you define a timeline and to divide your task into small modules.Which combine to form a big giant task. Breaking a Huge problem to small modules and tackling those individually over a period of time to add up the results is the smartness in a smart goal.<br/>
 After reading the above? is your Goal really smart??
-if not set one and work towards it.<br/>
+if not set one and work towards it.<br/><br/>
 
-Financial goals are not different and should be considered a problem of reverse engineering.<br/>
+Financial goals are not different and should be considered a problem of reverse engineering.<br/><br/>
 say I've set a goal to buy an asset worth 15 Lakhs in 5 years<br/>
-I estimated the returns on me investments to be 12% after being normalized for inflation.<br/>
-but the asset of car would also inflate and considering that too I would set a goal of 18 Lakhs.<br/>
+I estimated the returns on me investments to be 12% after being normalized for inflation.<br/><br/>
+but the asset of car would also inflate and considering that too I would set a goal of 18 Lakhs.<br/><br/>
 now I want 18 Lakhs in 5 years but I am also getting a real interest of 12%.<br/>
-so I will reverse Engineer the amount of monthly investments that I can make. If that monthy amount is fine for me the I can count my goal as SMART or else it would be unachievable as of current state.<br/> 
+so I will reverse Engineer the amount of monthly investments that I can make. If that monthy amount is fine for me the I can count my goal as SMART or else it would be unachievable as of current state.<br/><br/> 
 so I will start a sip with an aggressive mutual fund for 22000 a month.<br/>
 This is the basic crux behind setting and executing financial goals in perosnal finance. So calculate and start early to get most out of your money. Goals can be set for anything like child's education, your house, Retirement, etc.
 Just calculate and analyze your needs and wants to invest before you spend.
-
-Happy investing
+<br/><br/>
+Happy investing<br/>
 
 {% if page.comments %}
 
