--- a/_posts/2020-05-15-2020-05-15-It's-All-Mutual.md
+++ b/_posts/2020-05-15-2020-05-15-It's-All-Mutual.md
@@ -53,4 +53,20 @@ also to be noted that the mutual funds are better for investment wether it be sh
 But what is a NAV :: it stands for Net Asset Value, it is the basic price of a single unit of a mutual fund. Also unlike shares mutual funds can be purchased for less than a unit. Example if I have less money I can purchase 0.25 units of a Mutual fund too. Hence these are customisable. <br/><br/>
 
 Hope you will also experience sweetness of this icecream studio<br/><br/>
-Happy Investing 
+Happy Investing <br/>
+This is just an effort to share something I have during this Lockdown stay safe and keep learning
+
+{% if page.comments %}
+
+<div id="disqus_thread"></div>
+<script>
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://https-gupta-anubhav12-github-io-fortheloveofnifty.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+{% endif %}
