--- a/_posts/2020-05-15-2020-05-15-It's-All-Mutual.md
+++ b/_posts/2020-05-15-2020-05-15-It's-All-Mutual.md
@@ -3,9 +3,11 @@ layout: post
 title: P14-It's-All-Mutual
 date: 2020-05-15 17:30 
 author: Anubhav Gupta
+comments: true
 ---
 <style>
     header{
+      
       
      background-color: rgba(249, 241 ,241 , 0.7);
          font-weight: bolder;
