--- a/_posts/2020-05-15-2020-05-15-It's-All-Mutual.md
+++ b/_posts/2020-05-15-2020-05-15-It's-All-Mutual.md
@@ -25,13 +25,13 @@ comments: true
 **Mutual Funds** <br/>
 **snippet** Today we will introduce the concept of Mutual funds<br/>
 
-We all want to invest our savings somewhere and want our money to work for us but we are somewhat afraid of Stock Market due to it's volatility and senstivity, But what if there is a reasonably safe and easire approach to invest money and generate profits??<br/> <br/>
+We all want to invest our savings somewhere and want our money to work for us but we are somewhat afraid of Stock Market due to it's volatility and senstivity, But what if there is a reasonably safe and easier approach to invest money and generate profits??<br/> <br/>
 Let's see the basics of a Mutual fund : <br/><br/>
 as we have talked earlier that investing in a company requires deep knowledge of fundamental analysis and a handsome amount of time to analyze a single company. It also requires a constant watch on an invested company for it's performance. <br/><br/>
-But what if we oursource this tack to someone else and create a common fund collected from a large community of investors, Well this healthhy pool of money is called a Mutual Fund that have mutual contributions from a lot of people.<br/>
+But what if we oursource this task to someone else and create a common fund collected from a large community of investors, Well this healthhy pool of money is called a Mutual Fund that have mutual contributions from a lot of people.<br/>
 
 Now what is the benefit of this common collection and who is responsible of it's maintainance??<br/>
-1. Sometimes in market we cannnot purchase shares of a company that are too pricy like MRF tyres stands alone at 58,200 as on 15-05-2020. but a mediocre investor cannot atfford this price for a single share and has will to invest in company!!<br/?
+1. Sometimes in market we cannnot purchase shares of a company that are too pricy like MRF tyres stands alone at 58,200 as on 15-05-2020. but a mediocre investor cannot atfford this price for a single share and has will to invest in company!!<br/>
 so in laymans terms one can buy a part of share by investing in mutual funds because when a lot of investors with a common thought pool in money, The targeted share becomes affordable due to collection of corpus.<br/><br/>
 
 2. As we have seen the fund management is outsorced and investor has a little to do in research and analysis once he finds an Trusted AMC.<br/><br/>
@@ -44,9 +44,9 @@ Mutual Funds are like a ice cream shop from a child's fantasy with all the possi
 first of all let's again visit the concept of Equity and Debt.<br/>
 
 now in equity we (or AMC on our behalf) gets a partial ownership of that company and we are entitled to both profits and lossed equally hence Investments in Equity are riskier comparatively.<br/>
-But in the case of debt there is no loan sharing. Company has to pay us the money back with our interest hence this segment is nearly risk free.<br/>
+But in the case of debt there is no loss sharing. Company has to pay us the money back with our interest hence this segment is nearly risk free.<br/>
 Now a mutual fund portfolio is ike a icecream cone which is selected according to our taste and risk taking abilities, Some funds are Equity Focussed and some are Debt oriented. Now for high risk equity funds can give returns as high as 25%-30% in good functioning of market and can also pose losses for same.<br/> 
-whereas the debt segment is somewhat stable with about 8-12% of retern annually.....It's still better than your old **Bank FDR**.<br/>
+whereas the debt segment is somewhat stable with about 8-12% of return annually.....It's still better than your old **Bank FDR**.<br/>
 Now a perfect mix of these two broad options is reffered to as a hybrid fund.<br/><br/>
 Another classification of mutual funds is wether they pay **dividend** or not!
 if they do then they are called dividend funds and have a defined frequency of paying dividend<br/>
